fix planet alignement

--- a/css/styles.css
+++ b/css/styles.css
@@ -109,6 +109,7 @@ img.Arrow {
   background-position: center;
   background-size: contain;
   margin-bottom: 0;
+  padding-left: 0;
 }
 
 .planetContainer {
